# Didungeon

./: Cargo.toml  note.txt
assets/saves/: save_0.ddg
src/: common.rs  game.rs  gui.rs  lib.rs  main.rs  tests.rs  wyrand.rs
src/.game/: skill.rs
src/.game/skill/: struggle.rs  unbound.rs
src/.game/unit/: new.rs  show.rs
src/.game/unit/state/: defense.rs
src/game/: ai.rs  board.rs  skill.rs  unit.rs
src/game/board/: action.rs  basic.rs  find.rs  moving.rs  new.rs  run.rs  show.rs  skill.rs  solo.rs  team.rs  turn.rs
src/game/board/skill/: can.rs  eva.rs  exe.rs
src/game/board/turn/: auto.rs  main.rs  phase.rs  start.rs  tie.rs  unbound.rs  untie.rs
src/game/skill/: drag.rs  helper.rs  hold.rs  punch.rs  skill_list.rs  struggle.rs  tie.rs  unbound.rs  untie.rs
src/game/skill/skill_list/: catch.rs  force_unbound.rs  punch.rs  struggle.rs  tie.rs  unbound.rs  untie.rs  walk.rs
src/game/unit/: action.rs  attr.rs  basic.rs  bound.rs  new.rs  set.rs  show.rs  state.rs  test.rs
src/game/unit/attr/: about_self.rs  defense.rs  offense.rs
src/game/unit/bound/: show.rs
src/game/unit/state/: offense.rs  to_self.rs
src/game_old/board/: action.rs  run.rs
src/game_old/skill/: hold.rs  tie.rs
src/game_old/unit/: test.rs
src/gui/: fonts.rs  show.rs
src/tests/: egui.rs  solo.rs
src/tests/solo/: balance.rs  seq.rs
src/tests/solo/seq/: agi.rs  dex.rs  str.rs
