[package]
name = "didungeon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorful = "0.2.2"
eframe = "0.22.0"
egui = "0.22.0"
num-rational = "0.4.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
